--- a/ansible/roles/mariadb-replication/templates/mariadb.conf.j2
+++ b/ansible/roles/mariadb-replication/templates/mariadb.conf.j2
@@ -81,7 +81,7 @@ innodb_log_file_size={{ innodb_log_file_size }}
 tmp_table_size = {{ tmp_table_size }}
 max_heap_table_size = {{ max_heap_table_size }}
 
-slave_load_tmpdir= {{ slave_log_tmpdir }}
+slave_load_tmpdir= {{ slave_load_tmpdir }}
 tmpdir = {{ tmpdir }}
 table_open_cache = 2000
 
