--- a/app/flask-intro/templates/index.html
+++ b/app/flask-intro/templates/index.html
@@ -3,4 +3,13 @@
 <h1>Welcome Flask!</h1>
 <br>
 <p>Click <a href="/logout">here</a> to logout</p>
+<br>
+<h2>Posts</h2>
+{% for post in posts %}
+    <p>
+    <strong>Title:</strong> {{ post.title }}
+    <br>
+    <strong>Description:</strong> {{ post.description }}
+    </p>
+{% endfor %}
 {% endblock %}
