--- a/ansible/roles/mariadb_single/templates/mariadb.conf.j2
+++ b/ansible/roles/mariadb_single/templates/mariadb.conf.j2
@@ -33,17 +33,33 @@ wait_timeout = {{ mysqld.wait_timeout }}
 interactive_timeout = {{ mysqld.interactive_timeout }}
 connect_timeout = {{ mysqld.connect_timeout }}
 
+### Redo log
+innodb_log_files_in_group = {{ mysqld.innodb_log_files_in_group }}
+innodb_log_file_size = {{ mysqld.innodb_log_file_size }}
+
 ### temporary tables ###
 tmp_table_size = {{ mysqld.tmp_table_size }}
 max_heap_table_size = {{ mysqld.max_heap_table_size }}
 tmpdir = {{ mysqld.tmpdir }}
 
 ### thread pool ###
+{% if use_thread_pool == 1 %}
 thread_handling = {{ mysqld.thread_handling }}
 thread_pool_size = {{ mysqld.thread_pool_size }}
 extra_port = {{ mysqld.extra_port }}
 extra_max_connections = {{ mysqld.extra_max_connections }}
 max_connections = {{ mysqld.max_connections }}
+{% else %}
+# I do not use thread pool
+{% endif %}
+
+### thread cache ###
+{% if use_thread_cache == 1 %}
+thread_cache_size = {{ mysqld.thread_cache_size }}
+max_connections = {{ mysqld.max_connections }}
+{% else %}
+# I do not use thread cache
+{% endif %}
 
 ### log ###
 log_output = {{ mysqld.log_output }}
@@ -56,8 +72,27 @@ slow_query_log_file = {{ mysqld.slow_query_log_file }}
 general_log = 0
 general_log_file = {{ mysqld.general_log_file }}
 
+### replication ###
+{% if use_gtid == 1 %}
+gtid_domain_id = {{ mysqld.gtid_domain_id }}
+{% endif %}
+report_host = {{ mysqld.report_host }}
+report_port = {{ mysqld.port }}
+expire_logs_days = {{ mysqld.expire_logs_days }}
+log_bin = {{ mysqld.report_host }}-bin
+log_bin_index = {{ mysqld.report_host }}-bin.log.index
+relay_log = {{ mysqld.report_host }}-relay-bin
+relay_log_index = {{ mysqld.report_host }}-relay-bin.index
+server_id = {{ mysqld.server_id }}
+log_slave_updates = 1
+binlog_format = ROW
+max_binlog_size = {{ mysqld.max_binlog_size }}
+
 [mariadb-{{ base_version }}]
 
 [xtrabackup]
 datadir = {{ dir.datadir }}
+socket = {{ mysqld.socket }}
 streamfmt = xbstream
+innodb_log_files_in_group = {{ mysqld.innodb_log_files_in_group }}
+innodb_log_file_size = {{ mysqld.innodb_log_file_size }}
