--- a/ansible/roles/pmm/templates/deploy_pmm_client.sh.j2
+++ b/ansible/roles/pmm/templates/deploy_pmm_client.sh.j2
@@ -20,9 +20,9 @@ mysql_host={{ pmm.mysql.host }}
 ps -lef | grep mysqld | grep -v "grep"
 [ $? -eq 0 ] && pmm-admin add mysql --host=${mysql_host} --user ${mysql_user} --port ${mysql_port} --password ${mysql_passwd}
 {% elif pmm_type == "mongo" %}
-mongo_uri=mongodb://${mongo_user}:${mongo_passwd}@${mongo_host}:${mongo_port}/${mongo_db}
+mongo_uri={{ mongo_uri }}
 ps -lef | grep mongod | grep -v "grep"
-if [[ $? -eq 0 && ! -z mongo_user && ! -z mongo_passwd ]]; then
+if [ $? -eq 0 ]; then
   pmm-admin add mongodb --uri ${mongo_uri}
 fi
 {% endif %}
