--- a/ansible/roles/nginx_webserver/templates/nginx.conf.j2
+++ b/ansible/roles/nginx_webserver/templates/nginx.conf.j2
@@ -21,4 +21,6 @@ http {
     access_log  /var/log/nginx/access.log  main;
     sendfile        on;
     keepalive_timeout  65;
+
+    include {{ nginx_conf.vhosts_dir }}/*.conf;
 }
