--- a/ansible/roles/nginx_webserver/templates/nginx.conf.j2
+++ b/ansible/roles/nginx_webserver/templates/nginx.conf.j2
@@ -21,17 +21,11 @@ http {
     access_log  /var/log/nginx/access.log  main;
     sendfile        on;
     keepalive_timeout  65;
-
+{% if role == "proxy"  or role == "proxy_cache" %}
+    include {{ nginx_conf.upstream|indent(4) }};
+{% endif %}
 {% if role == "proxy_cache" %}
-{% if item.upstreams is defined %}
-upstream {{ item.service_name|indent(4) }} {
-{% for backend in item.upstreams %}
-{{ backend|indent(6) }};
-{% endfor %}
-}
+    proxy_cache_path {{ proxy_cache_path|indent(4) }};
 {% endif %}
-proxy_cache_path {{ proxy_cache_path|indent(4) }};
-{% endif %}
-
     include {{ nginx_conf.vhosts_dir }}/*.conf;
 }
