--- a/ansible/roles/nginx_webserver/templates/nginx.vhosts.conf.j2
+++ b/ansible/roles/nginx_webserver/templates/nginx.vhosts.conf.j2
@@ -6,7 +6,7 @@ server {
     server_name {{ item.server_name }};
 {% endif %}
 
-{% if item.root is defined %}
+{% if role == "backend" and item.root is defined %}
     root {{ item.root }};
 {% endif %}
 
