--- a/ansible/roles/nginx_webserver/templates/nginx.vhosts.conf.j2
+++ b/ansible/roles/nginx_webserver/templates/nginx.vhosts.conf.j2
@@ -25,13 +25,17 @@ server {
     location / {
 {% if role == "proxy" or role == "proxy_cache" %}
       proxy_pass http://{{ item.upstream.name }};
+      proxy_set_header        Host $host;
+      proxy_set_header        X-Real-IP $remote_addr;
+      proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header        X-Forwarded-Proto $scheme;
 {% endif %}
 {% if role == "proxy_cache" %}
       proxy_cache {{ item.cache_name }};
 {% endif %}
       index index.html index.php;
     }
-{% if item.locations is defined %}
+{% if role == "backend" and item.locations is defined %}
     {{ item.locations|indent(4) }}
 {% endif %}
 }
