--- a/ansible/roles/nginx_webserver/templates/nginx.vhosts.conf.j2
+++ b/ansible/roles/nginx_webserver/templates/nginx.vhosts.conf.j2
@@ -32,6 +32,14 @@ server {
 {% endif %}
 {% if role == "proxy_cache" %}
       proxy_cache {{ item.cache_name }};
+      add_header X-Proxy-Cache $upstream_cache_status;
+      #  If the header includes the "Set-Cookie" field, such a response will not be cached.
+      proxy_ignore_headers Set-Cookie;
+      proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+      proxy_cache_lock on;
+      proxy_cache_valid 200 302 10m;
+      proxy_cache_valid 301     1h;
+
 {% endif %}
       index index.html index.php;
     }
