--- a/ansible/roles/mariadb_single/templates/client.cnf.j2
+++ b/ansible/roles/mariadb_single/templates/client.cnf.j2
@@ -1,7 +1,7 @@
 [client]
-user={{ admin_user.name }}
-password={{ admin_user.passwd }}
+user={{ mariadb_root_name }}
+password={{ mariadb_root_passwd }}
 
 [mysql]
-user={{ admin_user.name }}
-password={{ admin_user.passwd }}
+user={{ mariadb_root_name }}
+password={{ mariadb_root_passwd }}
