--- a/ansible/roles/common/templates/admins.conf.j2
+++ b/ansible/roles/common/templates/admins.conf.j2
@@ -1,3 +1,3 @@
-{{ admins.cmd_alias }}
+{{ admin_cmd_alias }}
 ### /bin/sh in cmd_alias will prevent ansible to use all users in admins group 
-%{{ admins.group }} {{ admins.cmd }}
+%{{ admin_group }} {{ admin_cmd }}
