--- a/ansible/roles/php-fpm/templates/php_fpm.d.www.conf.j2
+++ b/ansible/roles/php-fpm/templates/php_fpm.d.www.conf.j2
@@ -9,7 +9,7 @@
 ;                            specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = {{ php_fpm.listen }}
+listen = {{ php_fpm_listen }}
 
 ; Set listen(2) backlog. A value of '-1' means unlimited.
 ; Default Value: -1
@@ -21,7 +21,7 @@ listen = {{ php_fpm.listen }}
 ; must be separated by a comma. If this value is left blank, connections will be
 ; accepted from any ip address.
 ; Default Value: any
-{% if php_fpm.listen == "127.0.0.1:9000" %}
+{% if php_fpm_listen == "127.0.0.1:9000" %}
 listen.allowed_clients = 127.0.0.1
 {% endif %}
 
