--- a/ansible/roles/phpmyadmin/templates/phpmyadmin.conf.j2
+++ b/ansible/roles/phpmyadmin/templates/phpmyadmin.conf.j2
@@ -7,7 +7,7 @@ $cfg['blowfish_secret'] = '{{ phpmyadmin_blowfish_secret }}'; /* YOU MUST FILL I
 
 $i = 0;
 
-{% for item in mysql_servers %}
+{% for item in phpmyadmin_mysql_servers %}
 
 $i++;
 /* Authentication type */
