--- a/ansible/roles/monitoring/templates/replicationcheck.sh.j2
+++ b/ansible/roles/monitoring/templates/replicationcheck.sh.j2
@@ -2,10 +2,10 @@
 
 SECONDS_BEHIND_MASTER=300
 
-MYSQL_HOST="{{ checker.host }}"
-MYSQL_PORT="{{ checker.port }}"
-MYSQL_USERNAME="{{ checker.name }}"
-MYSQL_PASSWORD="{{ checker.passwd }}"
+MYSQL_HOST="{{ checker_host }}"
+MYSQL_PORT="{{ checker_port }}"
+MYSQL_USERNAME="{{ checker_name }}"
+MYSQL_PASSWORD="{{ checker_passwd }}"
 
 echo=`which echo`
 mysql=`which mysql`
