--- a/ansible/roles/monitoring/templates/galeracheck.sh.j2
+++ b/ansible/roles/monitoring/templates/galeracheck.sh.j2
@@ -5,10 +5,10 @@ READY="ON"
 CLUSTER_STATUS="Primary"
 CONNECTED="ON"
 
-MYSQL_HOST="{{ checker.host }}"
-MYSQL_PORT="{{ checker.port }}"
-MYSQL_USERNAME="{{ checker.name }}"
-MYSQL_PASSWORD="{{ checker.passwd }}"
+MYSQL_HOST="{{ checker_host }}"
+MYSQL_PORT="{{ checker_port }}"
+MYSQL_USERNAME="{{ checker_name }}"
+MYSQL_PASSWORD="{{ checker_passwd }}"
 
 echo=`which echo`
 mysql=`which mysql`
