--- a/ansible/roles/mariadb_single/templates/mariadb.conf.j2
+++ b/ansible/roles/mariadb_single/templates/mariadb.conf.j2
@@ -10,6 +10,7 @@ user = {{ mariadb_user }}
 datadir = {{ mariadb_datadir }}
 socket = {{ mariadb_socket }}
 port = {{ mariadb_port }}
+bind_address = {{ mariadb_bind_address }}
 skip_name_resolve = {{ mariadb_skip_name_resolve }}
 max_allowed_packet = {{ mariadb_max_allowed_packet }}
 
